--- a/wp-content/themes/skt-corp/style.css
+++ b/wp-content/themes/skt-corp/style.css
@@ -2232,7 +2232,7 @@ height: 30px;
 #paypalAdaptive .form-item{
     margin-bottom: 10px;
 }
-#paypalAdaptive .form-item input{
+#paypalAdaptive .form-item input, #paypalAdaptive .form-item textarea{
     width: 60%;
 }
 #paypalAdaptive .form-item label{
@@ -2252,3 +2252,9 @@ height: 30px;
 }
 .fee_hour{height: 26px}
 .rw-rating-table{display:none}
+input[type="email"], input[type="tel"]{
+    height: 26px;
+}
+.create-account.woocommerce-validated{
+    display: none;
+}
