--- a/wp-content/themes/skt-corp/style.css
+++ b/wp-content/themes/skt-corp/style.css
@@ -2258,3 +2258,6 @@ input[type="email"], input[type="tel"]{
 .create-account.woocommerce-validated{
     display: none;
 }
+.rw-top-rated-page{
+    display: none;
+}
